Issue #10296 : Don't handle BreakPoint exceptions using Structured Exception Handling on windows.